--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,20 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity_DocTruyen"
+            android:name=".Activity.MainActivity_DocTruyen"
             android:exported="false" />
         <activity
-            android:name=".MainActivity_ThongTinTruyen"
+            android:name=".Activity.MainActivity_ThongTinTruyen"
             android:exported="false" />
         <activity
-            android:name=".MainActivity_Home"
+            android:name=".Activity.MainActivity_Home"
             android:exported="false"
             android:label="@string/title_activity_main3" />
         <activity
-            android:name=".MainActivity_DKDN"
+            android:name=".Activity.MainActivity_DKDN"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
