--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation "androidx.viewpager2:viewpager2:1.0.0-alpha01"
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'me.relex:circleindicator:2.1.6'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
